Repaired carousel bug with Bootstrap scripts

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Bootstrap CDN -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font Awesome CDN -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
 		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
 	<!-- Custom Stylesheet -->
-	<link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
 	<title>Infinity Yoga | Sign up today and get 1 month of unlimited yoga!</title>
 </head>
@@ -155,7 +155,7 @@
 			<div class="row text-center">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="/assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Vinyasa">
+						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Vinyasa">
 						<p><strong>Vinyasa Flow</strong></p>
 						<p>Tuesdays, 7:00pm</p>
 					</div>
@@ -163,7 +163,7 @@
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="/assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Rooftop">
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Rooftop">
 						<p><strong>Rooftop Yoga</strong></p>
 						<p>Thursdays, 7:00pm</p>
 					</div>
@@ -171,7 +171,7 @@
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="/assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Meditation">
+						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Meditation">
 						<p><strong>Candlelight Meditation</strong></p>
 						<p>Sundays, 4:00pm</p>
 					</div>
@@ -219,6 +219,12 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
+    
 </body>
 </html>
