--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 			<div class="col-12 col-md-6 col-lg-4">
             <div class="about">
 					<h3 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h3>
-					<p class="display-4 about-content">Yoga improves healthy brain function & increases clarity</p>
+					<p class="display-4 about-content">Yoga increases healthy brain function & mental clarity</p>
 				</div>
 			</div>
             <div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
 					<h3 class="about-header"><i class="fas fa-fire-alt d-none d-sm-block"></i> Body</h3>
-					<p class="display-4 about-content">Burn calories with power vinyasa & pilates</p>
+					<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
@@ -149,7 +149,7 @@
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
 		<div class="container text-center bg-blue">
-			<h2>Our Schedule</h2>
+			<h2>Classes</h2>
             <hr>
 			<p class="schedule-content">We hope to see you soon!</p>
 			<div class="row text-center">
@@ -178,44 +178,49 @@
 				</div>
 			</div>
 <!--Quotes Carousel-->
-<h2>What Our Members Say</h2>
-<div class="container-fluid">
-<div id="myCarousel"  class="carousel slide" data-ride="carousel">
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!--Wrapper for slides-->
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-        <blockquote class="d-block w-100">"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></blockquote>
-	    </div>
-        <div class="carousel-item">
-        <blockquote>"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></blockquote>	
-	    </div>
-           <div class="carousel-item">
-        <blockquote>"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></blockquote>	
-	    </div>
-	  </div>
-
-      <!--Left and right controls-->
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-           <span class="sr-only">Previous</span>
-      </a>
-       <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    </div>
-   </div>
+<h2 class="text-center">What Our Members Say</h2>
+	<div class="container-fluid text-center">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!--Indicators-->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>
+	
+<!--Wrapper for slides-->
+<div class="carousel-inner">
+	<div class="carousel-item active">
+		<blockquote class="d-block w-100"><strong>"Infinity yoga is the best! I feel happier and healthier than
+							ever!"</strong><br><span class="cite" style="font-style:normal;">Octavia Bliss, Studio member</span>
+		</blockquote>
+	</div>
+	<div class="carousel-item">
+		<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
+			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
+		</blockquote>
+	</div>
+	<div class="carousel-item">
+		<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
+			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
+		</blockquote>
+	</div>
 </div>
-  </div>
-</section>
 
+<!--Left and right controls-->
+<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+	<i class="fas fa-chevron-left" aria-hidden="true"></i>
+	<span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+	<i class="fas fa-chevron-right" aria-hidden="true"></i>
+	<span class="sr-only">Next</span>
+    </a>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -225,6 +230,6 @@
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-    
+
 </body>
 </html>
