--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="col-12 text-center">
                 <h1>Infinity</h1>
                  <p class="lead">Begin your practice today</p>
-				    <p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule" role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a></p>
+				    <p><a class="btn btn-info btn-lg" type="button" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
 				</div>
 			</div>
@@ -149,7 +149,7 @@
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
 		<div class="container text-center bg-blue">
-			<h2>Classes</h2>
+			<h2>Schedule</h2>
             <hr>
 			<p class="schedule-content">We hope to see you soon!</p>
 			<div class="row text-center">
