--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<div class="container-fluid blue-wrapper">
 		<div class="container text-center bg-blue">
 			<h2>Schedule</h2>
-            <hr>
+			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
 			<div class="row text-center">
 				<div class="col-12 col-md-6 col-lg-4">
@@ -177,50 +177,66 @@
 					</div>
 				</div>
 			</div>
-<!--Quotes Carousel-->
-<h2 class="text-center">What Our Members Say</h2>
-	<div class="container-fluid text-center">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!--Indicators-->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-	
-<!--Wrapper for slides-->
-<div class="carousel-inner">
-	<div class="carousel-item active">
-		<blockquote class="d-block w-100"><strong>"Infinity yoga is the best! I feel happier and healthier than
-							ever!"</strong><br><span class="cite" style="font-style:normal;">Octavia Bliss, Studio member</span>
-		</blockquote>
-	</div>
-	<div class="carousel-item">
-		<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
-			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
-		</blockquote>
-	</div>
-	<div class="carousel-item">
-		<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
-			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
-		</blockquote>
-	</div>
-</div>
+			<!--Quotes Carousel-->
+			<h2 class="text-center">What Our Members Say</h2>
+			<div class="container-fluid text-center">
+				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					<!--Indicators-->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					</ol>
 
-<!--Left and right controls-->
-<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-	<i class="fas fa-chevron-left" aria-hidden="true"></i>
-	<span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-	<i class="fas fa-chevron-right" aria-hidden="true"></i>
-	<span class="sr-only">Next</span>
-    </a>
-</div>
-</div>
-</div>
-</div>
+					<!--Wrapper for slides-->
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<blockquote class="d-block w-100"><strong>"Infinity yoga is the best! I feel happier and healthier than
+							ever!"</strong><br><span class="cite" style="font-style:normal;">Octavia Bliss, Studio member</span>
+							</blockquote>
+						</div>
+						<div class="carousel-item">
+							<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
+			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
+							</blockquote>
+						</div>
+						<div class="carousel-item">
+							<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
+			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
+							</blockquote>
+						</div>
+					</div>
+
+					<!--Left and right controls-->
+					<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+						<i class="fas fa-chevron-left" aria-hidden="true"></i>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+						<i class="fas fa-chevron-right" aria-hidden="true"></i>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+         <!--./quotes-carousel--->
+		</div>
+	</div>
 </section>
+<!--./schedule-->
+
+<!--Contact Section-->
+<section class="contact" id="contact">
+<div class="container-fluid">
+    <h2 class="text-center">Contact Us</h2>
+    <div class="row">
+        <div class="col-12 col-6 col-4">
+            <p class="text-center">Contact our studio and we'll get back to you ASAP</p>
+
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
