--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <!--Schedule-->
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
-		<div class="container text-center bg-blue">
+		<div class="container-fluid text-center bg-blue">
 			<h2>Schedule</h2>
 			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
@@ -178,7 +178,7 @@
 				</div>
 			</div>
 			<!--Quotes Carousel-->
-			<h2 class="text-center">What Our Members Say</h2>
+			<h3 class="text-center quotes">What Our Members Say</h3>
 			<div class="container-fluid text-center">
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
 					<!--Indicators-->
