Added table for contact form

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<div class="flex-column col-12">
 		</div>
 		<div class="flex-column col-12">
-			<p class="text-md-center font-weight-normal"> We offer diverse classes, a flexible schedule and unbelievable yoga instructors to help you as you improve your practice. Located in the heart of NYC, Infinity is proud to provide a peaceful, loving environment for our members!
+			<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a flexible schedule and fair prices. We love what we do and we believe everybody should experience the peace, love &amp; eternal happiness we feel at our studio.
 			</p>
 		</div>
     </div>
@@ -228,10 +228,26 @@
 <section class="contact" id="contact">
 <div class="container-fluid">
     <h2 class="text-center">Contact Us</h2>
-    <div class="row">
-        <div class="col-12 col-6 col-4">
+     <div class="row">
+        <div class="col-12 col-6">
             <p class="text-center">Contact our studio and we'll get back to you ASAP</p>
-
+            <p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
+            <p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+            <p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
+            </div>
+        <div class="col-12 col-6">
+            <div class="row">
+                <div class="col-6 col-6 col-lg-6 form-group">
+                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                </div>
+                <div class="col-12 col-6 form-group">
+                    <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                </div>
+            </div>
+            <textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea><br>
+            <div class="row">
+            
+            </div>
             </div>
         </div>
     </div>
