Added submit button to contact form

--- a/index.html
+++ b/index.html
@@ -226,31 +226,33 @@
 
 <!--Contact Section-->
 <section class="contact" id="contact">
-<div class="container-fluid">
-    <h2 class="text-center">Contact Us</h2>
-     <div class="row">
-        <div class="col-12 col-6">
-            <p class="text-center">Contact our studio and we'll get back to you ASAP</p>
-            <p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
-            <p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
-            <p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
-            </div>
-        <div class="col-12 col-6">
-            <div class="row">
-                <div class="col-6 col-6 col-lg-6 form-group">
-                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+	<div class="container-fluid">
+		<h2 class="text-center">Contact Us</h2>
+		<div class="row">
+			<div class="col-12 col-6">
+				<p class="text-center">Contact our studio and we'll get back to you ASAP</p>
+				<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
+				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
+			</div>
+			<div class="col-12 col-6">
+				<div class="row">
+					<div class="col-6 col-6 col-lg-6 form-group">
+						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                 </div>
-                <div class="col-12 col-6 form-group">
-                    <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+						<div class="col-12 col-6 form-group">
+							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
                 </div>
-            </div>
-            <textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea><br>
-            <div class="row">
-            
-            </div>
-            </div>
-        </div>
-    </div>
+						</div>
+						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea><br>
+						<div class="row">
+                            <div class="col-12 col-sm-12 form-group">
+                                <button class="btn btn-info float-right" type="submit">Send</button>
+                                </div>
+						</div>
+					</div>
+				</div>
+			</div>
 </section>
 
 
