Embedded google map iframe in contact section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Header -->
 <header>
 <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
 		<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon">
@@ -97,20 +97,20 @@
         <div class="row">
 			<div class="col-12 col-md-6 col-lg-4">
             <div class="about">
-					<h3 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h3>
+					<h4 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h4>
 					<p class="display-4 about-content">Yoga increases healthy brain function & mental clarity</p>
 				</div>
 			</div>
             <div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h3 class="about-header"><i class="fas fa-fire-alt d-none d-sm-block"></i> Body</h3>
+					<h4 class="about-header"><i class="fas fa-fire-alt d-none d-sm-block"></i> Body</h4>
 					<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h3 class="about-header"><i class="fas fa-praying-hands d-none d-sm-block"></i> Spirit
-					</h3>
+					<h4 class="about-header"><i class="fas fa-praying-hands d-none d-sm-block"></i> Spirit
+					</h4>
 					<p class="display-4 about-content">Find your inner strength through meditation.
 					</p>
 				</div>
@@ -118,21 +118,21 @@
 		<div class="row">
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+					<h4 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h4>
 					<p class="display-4 about-content">Forget all the stress and focus on you.
 					</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+					<h4 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h4>
 					<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h3 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
-					</h3>
+					<h4 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+					</h4>
 					<p class="display-4 about-content">Bring harmony & balance into your life.
 					</p>
 				</div>
@@ -145,7 +145,9 @@
 </section>
 <!--/.about -->
 
-<!--Schedule-->
+<!-- Schedule Section-->
+    <!------------ This code was copied/inspired by W3Schools.com
+    https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
 		<div class="container-fluid text-center bg-blue">
@@ -225,6 +227,8 @@
 <!--./schedule-->
 
 <!--Contact Section-->
+    <!------------ This code was copied/inspired by W3Schools.com
+    https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="contact" id="contact">
 	<div class="container-fluid">
 		<h2 class="text-center">Contact Us</h2>
@@ -253,10 +257,16 @@
 					</div>
 				</div>
 			</div>
+<!--Google Maps Embed -->
+<div class="row">
+    <div class="col-12 col-6">
+<div class="embed-responsive embed-responsive-16by9 align-center">
+               <iframe class="embed-responsive-item" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJU4RFqhFcwokRfMbASZnIKYs&key=AIzaSyDCMMQzf0UcYrHKP-zfNVQSU_ASg7LEY2Q" allowfullscreen></iframe> 
+            </div>
+    </div>
+</div>
 </section>
 
-
-<!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
