--- a/index.html
+++ b/index.html
@@ -250,21 +250,23 @@
 						</div>
 						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea><br>
 						<div class="row">
-                            <div class="col-12 col-sm-12 form-group">
-                                <button class="btn btn-info float-right" type="submit">Send</button>
-                                </div>
+							<div class="col-12 col-sm-12 form-group">
+								<button class="btn btn-info float-right" type="submit">Send</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-<!--Google Maps Embed -->
-<div class="row">
-    <div class="col-12 col-6">
-<div class="embed-responsive embed-responsive-16by9 align-center">
-               <iframe class="embed-responsive-item" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJU4RFqhFcwokRfMbASZnIKYs&key=AIzaSyDCMMQzf0UcYrHKP-zfNVQSU_ASg7LEY2Q" allowfullscreen></iframe> 
-            </div>
-    </div>
-</div>
+	<!--Google Maps Embed -->
+			<div class="row">
+				<div class="col-12 col-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" width="100%" height="450" frameborder="0" style="border:0"
+							src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJU4RFqhFcwokRfMbASZnIKYs&key=AIzaSyDCMMQzf0UcYrHKP-zfNVQSU_ASg7LEY2Q"
+							allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
 </section>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
