--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <!-- Body -->
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 <!-- Header -->
 <header>
 <!-- Navbar -->
@@ -269,13 +269,21 @@
 			</div>
 </section>
 
+<!--Footer-->
+<footer class="container-fluid text-center">
+    <a href="#myPage" title="To Top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
+    <p>2020 Alissa Troiano | Code Institute Project | Footer Credits <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a> </p>
+</footer>
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+</script>
 
 </body>
 </html>
