Updated footer content

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!------------ This code was copied/inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="contact" id="contact">
-	<div class="container-fluid">
+	<div class="container container-fluid">
 		<h2 class="text-center">Contact Us</h2>
 		<div class="row">
 			<div class="col-12 col-6">
@@ -274,7 +274,7 @@
     <a href="#myPage" title="To Top">
         <i class="fas fa-chevron-up"></i>
     </a>
-    <p>2020 Alissa Troiano | Code Institute Project | Footer Credits <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a> </p>
+    <p>2020 Alissa Troiano | Code Institute Project</p>
 </footer>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
