--- a/index.html
+++ b/index.html
@@ -270,12 +270,14 @@
 </section>
 
 <!--Footer-->
+<section class="footer">
 <footer class="container-fluid text-center">
     <a href="#myPage" title="To Top">
         <i class="fas fa-chevron-up"></i>
     </a>
     <p>2020 Alissa Troiano | Code Institute Project</p>
 </footer>
+</section>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
