--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <!-- Body -->
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<body>
+    <main id="myPage" data-spy="scroll" data-target="nav" data-offset="60">
 <!-- Header -->
 <header>
 <!-- Navbar -->
@@ -266,18 +267,11 @@
 					</div>
 				</div>
 			</div>
-	<!--Google Maps Embed -->
-			<div class="row">
-				<div class="col-12 col-6">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" width="100%" height="450" frameborder="0" style="border:0"
-							src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJU4RFqhFcwokRfMbASZnIKYs&key=AIzaSyDCMMQzf0UcYrHKP-zfNVQSU_ASg7LEY2Q"
-							allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-</section>
+<!-- Image of location/map -->
+<img src="assets/images/aerial.jpg" style="width:100%;">
 
+</section>
+</main>
 <!--Footer-->
 <section class="footer">
 <footer class="container-fluid text-center">
