--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
+				<a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
 				</a>
 			</li>
 			<li class="nav-item">
