Repaired padding and float issue in about section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<!-- Required meta tags -->
+<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -99,7 +99,7 @@
 			<div class="col-12 col-md-6 col-lg-4">
             <div class="about">
 					<h4 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h4>
-					<p class="display-4 about-content">Yoga increases healthy brain function & mental clarity</p>
+					<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
 				</div>
 			</div>
             <div class="col-12 col-md-6 col-lg-4">
@@ -134,7 +134,7 @@
 				<div class="about">
 					<h4 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
 					</h4>
-					<p class="display-4 about-content">Bring harmony & balance into your life.
+					<p class="display-4 about-content">Bring harmony &amp; balance into your life.
 					</p>
 				</div>
 			</div>
@@ -144,7 +144,6 @@
   </div>
  </div>
 </section>
-<!--/.about -->
 
 <!-- Schedule Section-->
     <!------------ This code was copied/inspired by W3Schools.com
