Updated font awesome icons to display on extra small devices

--- a/index.html
+++ b/index.html
@@ -91,27 +91,28 @@
 			</p>
 		</div>
     </div>
-    <!--Why Infinity Container-->
-	<div class="container-fluid text-center">
-		<h2 class="section-header">Why Infinity?</h2>
-		<br>
-        <div class="row">
-			<div class="col-12 col-md-6 col-lg-4">
-            <div class="about">
-					<h4 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h4>
+<!--Why Infinity Container-->
+<div class="container-fluid text-center">
+<h2 class="section-header">Why Infinity?</h2>
+<br>
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+        <div class="about">
+            <i class="fas fa-brain d-sm-block"></i>
+				<h4 class="about-header">Mind</h4>
 					<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
-				</div>
-			</div>
-            <div class="col-12 col-md-6 col-lg-4">
-				<div class="about">
-					<h4 class="about-header"><i class="fas fa-fire-alt d-none d-sm-block"></i> Body</h4>
+		</div>
+	</div>
+    <div class="col-12 col-md-6 col-lg-4">
+		<div class="about">
+		<i class="fas fa-fire-alt d-sm-block"></i> 
+        <h4 class="about-header">Body</h4>
 					<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h4 class="about-header"><i class="fas fa-praying-hands d-none d-sm-block"></i> Spirit
-					</h4>
+					<i class="fas fa-praying-hands d-sm-block"></i> <h4 class="about-header">Spirit</h4>
 					<p class="display-4 about-content">Find your inner strength through meditation.
 					</p>
 				</div>
@@ -119,20 +120,23 @@
 		<div class="row">
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h4 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h4>
+					<i class="fas fa-peace  d-sm-block"></i> 
+                    <h4 class="about-header">Peace</h4>
 					<p class="display-4 about-content">Forget all the stress and focus on you.
 					</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h4 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h4>
+					<i class="fas fa-heart d-sm-block"></i> 
+                    <h4 class="about-header">Love</h4>
 					<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<h4 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+					<i class="fas fa-yin-yang d-sm-block"></i>
+                    <h4 class="about-header">Harmony
 					</h4>
 					<p class="display-4 about-content">Bring harmony &amp; balance into your life.
 					</p>
