Repaired carousel error that was causing poor visibility

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
-		<div class="container-fluid text-center bg-blue">
+		<div class="container text-center bg-blue">
 			<h2>Schedule</h2>
 			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
-			<div class="row text-center">
+			<div class="row h-100 align-items-center text-center">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
 						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Vinyasa">
