--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</div>
 			<!--Quotes Carousel-->
 			<h3 class="text-center quotes">What Our Members Say</h3>
-			<div class="container-fluid text-center">
+			<div class="container-fixed text-center">
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
 					<!--Indicators-->
 					<ol class="carousel-indicators">
@@ -197,19 +197,20 @@
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="d-block w-100"><strong>"Infinity yoga is the best! I feel happier and healthier than
-							ever!"</strong><br><span class="cite" style="font-style:normal;">Octavia Bliss, Studio member</span>
-							</blockquote>
+							<blockquote class="overflow-wrap: break-word"><strong>"Infinity yoga is the best! I feel happier and healthier than
+							ever!"</strong>	
+                            </blockquote>
+                            <p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
-			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
-							</blockquote>
+							<blockquote class="overflow-wrap: break-word"><strong>"I started meditation classes two months ago and I already feel the effects! "</strong>
+                            </blockquote>
+                            <p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote><strong>"Infinity yoga is the best! I feel happier and healthier than
-			ever!"</strong><br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span>
-							</blockquote>
+							<blockquote class="overflow-wrap: break-word"><strong>"Infinity yoga is the best! I feel happier and healthier than ever!"</strong>
+            	</blockquote>
+            <p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</p>
 						</div>
 					</div>
 
