Removed br elements to make homepage more semantic

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
     </div>
 <!--Why Infinity Container-->
 <div class="container-fluid text-center">
-<h2 class="section-header">Why Infinity?</h2>
-<br>
+<h3 class="section-header">Why Infinity?</h3>
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
         <div class="about">
@@ -253,7 +252,7 @@
 							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
                 </div>
 						</div>
-						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea><br>
+						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea>
 						<div class="row">
 							<div class="col-12 col-sm-12 form-group">
 								<button class="btn btn-info float-right" type="submit">Send</button>
