--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 <!--Why Infinity Container-->
 <div class="container-fluid text-center">
-<h3 class="section-header">Why Infinity?</h3>
+<h3 class="section-header text-break">Why Infinity?</h3>
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
         <div class="about">
