Repaired button errors as per w3 html validator

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 		</ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+         <button class="btn btn-outline-info my-2 my-sm-0" type="search">Search</button>
          </form>
-		</div>
-		</nav>
+         </div>
+	</nav>
     <!--./navbar-->
-	</header>
+</header>
 <!--./header-->
 
 <!-- Jumbotron Container-->
@@ -93,23 +93,23 @@
     </div>
 <!--Why Infinity Container-->
 <div class="container-fluid text-center">
-<h3 class="section-header text-break">Why Infinity?</h3>
+ <h3 class="about-header text-break">Why Infinity?</h3>
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
-        <div class="about">
-            <i class="fas fa-brain d-sm-block"></i>
-				<h4 class="about-header">Mind</h4>
-					<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
-		</div>
-	</div>
-    <div class="col-12 col-md-6 col-lg-4">
-		<div class="about">
-		<i class="fas fa-fire-alt d-sm-block"></i> 
-        <h4 class="about-header">Body</h4>
-					<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
-				</div>
-			</div>
-			<div class="col-12 col-md-6 col-lg-4">
+            <div class="about">
+                <i class="fas fa-brain d-sm-block"></i>
+				    <h4 class="about-header">Mind</h4>
+					    <p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
+                    </div>
+                </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="about">
+		            <i class="fas fa-fire-alt d-sm-block"></i> 
+                        <h4 class="about-header">Body</h4>
+					        <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+                        </div>
+                    </div>
+                <div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
 					<i class="fas fa-praying-hands d-sm-block"></i> <h4 class="about-header">Spirit</h4>
 					<p class="display-4 about-content">Find your inner strength through meditation.
@@ -238,7 +238,6 @@
 		<h2 class="text-center">Contact Us</h2>
 		<div class="row">
 			<div class="col-12 col-6">
-				<p class="text-center">Contact our studio and we'll get back to you ASAP</p>
 				<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
 				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
 				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
