Repaired img thumbnail dimensions as per w3 html validator

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 		</ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-         <button class="btn btn-outline-info my-2 my-sm-0" type="search">Search</button>
+         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
          </form>
-         </div>
+        </div>
 	</nav>
     <!--./navbar-->
 </header>
@@ -66,7 +66,7 @@
 				<div class="col-12 text-center">
                 <h1>Infinity</h1>
                  <p class="lead">Begin your practice today</p>
-				    <p><a class="btn btn-info btn-lg" type="button" href="#schedule" role="button">Schedule &raquo;</a></p>
+				    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
 				</div>
 			</div>
@@ -160,7 +160,7 @@
 			<div class="row h-100 align-items-center text-center">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Vinyasa">
+						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Vinyasa Flow">
 						<p><strong>Vinyasa Flow</strong></p>
 						<p>Tuesdays, 7:00pm</p>
 					</div>
@@ -168,7 +168,7 @@
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Rooftop">
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Rooftop">
 						<p><strong>Rooftop Yoga</strong></p>
 						<p>Thursdays, 7:00pm</p>
 					</div>
@@ -176,7 +176,7 @@
 
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="img-thumbnail">
-						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 200; height: 200;" alt="Meditation">
+						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" style="width: 100%; height: 100%;" alt="Meditation">
 						<p><strong>Candlelight Meditation</strong></p>
 						<p>Sundays, 4:00pm</p>
 					</div>
@@ -238,6 +238,7 @@
 		<h2 class="text-center">Contact Us</h2>
 		<div class="row">
 			<div class="col-12 col-6">
+				<p class="text-center">Contact us here:</p>
 				<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
 				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
 				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
