Repaired html comment errors as per w3 html validator

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
 					</a>
 				</div>
 			</div>
-         <!--./quotes-carousel--->
+    <!--./quotes-carousel-->
 		</div>
 	</div>
 </section>
 <!--./schedule-->
 
 <!--Contact Section-->
-    <!------------ This code was copied/inspired by W3Schools.com
+    <!-- This code was copied/inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="contact" id="contact">
 	<div class="container container-fluid">
