Repaired w3 html error by adding an alt tag to map img

--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
 				</div>
 			</div>
 <!-- Image of location/map -->
-<img src="assets/images/aerial.jpg" style="width:100%;">
-
+    <img src="assets/images/map.jpg" alt="map" style="width:100%;">
 </section>
 </main>
 <!--Footer-->
