Repaired w3 validator error by fixing inline comments

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </section>
 
 <!-- Schedule Section-->
-    <!------------ This code was copied/inspired by W3Schools.com
+    <!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="schedule" id="schedule">
 	<div class="container-fluid blue-wrapper">
@@ -231,7 +231,7 @@
 <!--./schedule-->
 
 <!--Contact Section-->
-    <!-- This code was copied/inspired by W3Schools.com
+    <!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="contact" id="contact">
 	<div class="container container-fluid">
