Repaired w3 semantic error by changing footer text element to h6

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <a href="#myPage" title="To Top">
         <i class="fas fa-chevron-up"></i>
     </a>
-    <p>2020 Alissa Troiano | Code Institute Project</p>
+    <h6>2020 Alissa Troiano | Code Institute Project</h6>
 </footer>
 </section>
 
