Added padding to contact section to create more whitespace in layout

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		<div class="row">
 			<div class="col-12 col-6">
 				<p class="text-center">Contact us here:</p>
-				<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
+				<p style="padding-top:20px;"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
 				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
 				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
 			</div>
