--- a/index.html
+++ b/index.html
@@ -76,76 +76,77 @@
 
 <!--About-->
 <section class="about" id="about">
-<div class="container container-fluid">
-	<div class="row">
-		<div class="col-12 col-6">
-			<h2 class="section-header">About Us</h2>
-			<hr class="block-divider block-divider--short block-divider--black">
+	<div class="container container-fluid">
+		<div class="row">
+			<div class="col-12 col-6">
+				<h2 class="section-header">About Us</h2>
+				<hr class="block-divider block-divider--short block-divider--black">
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="flex-column col-12">
-		</div>
-		<div class="flex-column col-12">
-			<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a flexible schedule and fair prices. We love what we do and we believe everybody should experience the peace, love &amp; eternal happiness we feel at our studio.
+		<div class="row">
+			<div class="flex-column col-12">
+			</div>
+			<div class="flex-column col-12">
+				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a
+					flexible schedule and fair prices. We love what we do and we believe everybody should experience the
+					peace, love &amp; eternal happiness we feel at our studio.
 			</p>
 		</div>
-    </div>
-<!--Why Infinity Container-->
-<div class="container-fluid text-center">
- <h3 class="about-header text-break">Why Infinity?</h3>
-    <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="about">
-                <i class="fas fa-brain d-sm-block"></i>
-				    <h4 class="about-header">Mind</h4>
-					    <p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
-                    </div>
-                </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="about">
-		            <i class="fas fa-fire-alt d-sm-block"></i> 
-                        <h4 class="about-header">Body</h4>
-					        <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
-                        </div>
-                    </div>
-                <div class="col-12 col-md-6 col-lg-4">
-				<div class="about">
-					<i class="fas fa-praying-hands d-sm-block"></i> <h4 class="about-header">Spirit</h4>
-					<p class="display-4 about-content">Find your inner strength through meditation.
-					</p>
-				</div>
-			</div>
-		<div class="row">
-			<div class="col-12 col-md-6 col-lg-4">
-				<div class="about">
-					<i class="fas fa-peace  d-sm-block"></i> 
-                    <h4 class="about-header">Peace</h4>
+	</div>
+    <!--Why Infinity Container-->
+    <div class="container-fluid text-center">
+	    <h3 class="about-header text-break">Why Infinity?</h3>
+	        <div class="row">
+		        <div class="col-12 col-md-6 col-lg-4">
+			        <div class="about">
+				        <i class="fas fa-brain d-sm-block"></i>
+				        <h4 class="about-header">Mind</h4>
+				        <p class="display-4 about-content">Yoga increases healthy brain function &amp; mental clarity</p>
+			        </div>
+		        </div>
+		        <div class="col-12 col-md-6 col-lg-4">
+			        <div class="about">
+				        <i class="fas fa-fire-alt d-sm-block"></i>
+				            <h4 class="about-header">Body</h4>
+				                <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+			                        </div>
+		                                </div>
+		        <div class="col-12 col-md-6 col-lg-4">
+			        <div class="about">
+				        <i class="fas fa-praying-hands d-sm-block"></i>
+				            <h4 class="about-header">Spirit</h4>
+				                <p class="display-4 about-content">Find your inner strength through meditation.
+				                </p>
+			                    </div>
+		                    </div>
+		    <div class="row">
+			    <div class="col-12 col-md-6 col-lg-4">
+				        <div class="about">
+					<i class="fas fa-peace  d-sm-block"></i>
+					<h4 class="about-header">Peace</h4>
 					<p class="display-4 about-content">Forget all the stress and focus on you.
 					</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-					<i class="fas fa-heart d-sm-block"></i> 
-                    <h4 class="about-header">Love</h4>
-					<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
-				</div>
-			</div>
-			<div class="col-12 col-md-6 col-lg-4">
+					     <i class="fas fa-heart d-sm-block"></i>
+					        <h4 class="about-header">Love</h4>
+					            <p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+                                </div>
+                            </div>
+            <div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
 					<i class="fas fa-yin-yang d-sm-block"></i>
-                    <h4 class="about-header">Harmony
-					</h4>
-					<p class="display-4 about-content">Bring harmony &amp; balance into your life.
-					</p>
-				</div>
-			</div>
-		</div>
-    <!--./why-infinity-container-->
+					    <h4 class="about-header">Harmony </h4>
+					        <p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+                        </div>
+                    </div>
+                </div>
+<!--./why-infinity-container-->
+            </div>
+        </div>
     </div>
-  </div>
- </div>
 </section>
 
 <!-- Schedule Section-->
@@ -197,19 +198,22 @@
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<blockquote class="overflow-wrap: break-word"><strong>"Infinity yoga is the best! I feel happier and healthier than
-							ever!"</strong>	
-                            </blockquote>
-                            <p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Studio member</p>
+							ever!"</strong>
+							</blockquote>
+							<p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word"><strong>"I started meditation classes two months ago and I already feel the effects! "</strong>
-                            </blockquote>
-                            <p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
+							<blockquote class="overflow-wrap: break-word">
+								<strong>"I started meditation classes two months ago and I already feel the effects! "</strong>
+							</blockquote>
+							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word"><strong>"Infinity yoga is the best! I feel happier and healthier than ever!"</strong>
-            	</blockquote>
-            <p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</p>
+							<blockquote class="overflow-wrap: break-word">
+								<strong>"Infinity yoga is the best! I feel happier and healthier than ever!"</strong>
+							</blockquote>
+							<p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Infinity Yoga Student
+							</p>
 						</div>
 					</div>
 
@@ -224,7 +228,7 @@
 					</a>
 				</div>
 			</div>
-    <!--./quotes-carousel-->
+			<!--./quotes-carousel-->
 		</div>
 	</div>
 </section>
@@ -261,20 +265,19 @@
 					</div>
 				</div>
 			</div>
-<!-- Image of location/map -->
-    <img src="assets/images/map.jpg" alt="map" style="width:100%;">
+			<!-- Image of location/map -->
+			<img src="assets/images/map.jpg" alt="map" style="width:100%;">
 </section>
-</main>
-<!--Footer-->
-<section class="footer">
-<footer class="container-fluid text-center">
-    <a href="#myPage" title="To Top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
-    <h6>2020 Alissa Troiano | Code Institute Project</h6>
-</footer>
-</section>
-
+			</main>
+			<!--Footer-->
+			<section class="footer">
+				<footer class="container-fluid text-center">
+					<a href="#myPage" title="To Top">
+						<i class="fas fa-chevron-up"></i>
+					</a>
+					<h6>2020 Alissa Troiano | Code Institute Project</h6>
+				</footer>
+			</section>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
