--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <!-- Body -->
-<body>
-    <main id="myPage" data-spy="scroll" data-target="nav" data-offset="60">
+<body id="myPage" data-spy="scroll" data-target="nav" data-offset="60">>
+
 <!-- Header -->
 <header>
 <!-- Navbar -->
@@ -54,6 +54,9 @@
     <!--./navbar-->
 </header>
 <!--./header-->
+
+<!--Main Content-->
+<main>
 
 <!-- Jumbotron Container-->
 <section class="jumbotron-container">
@@ -95,7 +98,7 @@
 	</div>
     <!--Why Infinity Container-->
     <div class="container-fluid text-center">
-	    <h3 class="about-header text-break">Why Infinity?</h3>
+	    <h3 class="about-header text-break text-lg-center">Why Infinity?</h3>
 	        <div class="row">
 		        <div class="col-12 col-md-6 col-lg-4">
 			        <div class="about">
@@ -197,19 +200,19 @@
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="overflow-wrap: break-word"><strong>"Infinity yoga is the best! I feel happier and healthier than
+							<blockquote class="overflow-wrap: break-word" style="font-size:14px;"><strong>"Infinity yoga is the best! I feel happier and healthier than
 							ever!"</strong>
 							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Studio member</p>
+							<p class="blockquote-footer" style="font-size:1em;">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word">
+							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
 								<strong>"I started meditation classes two months ago and I already feel the effects! "</strong>
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word">
+							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
 								<strong>"Infinity yoga is the best! I feel happier and healthier than ever!"</strong>
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Infinity Yoga Student
@@ -242,7 +245,6 @@
 		<h2 class="text-center">Contact Us</h2>
 		<div class="row">
 			<div class="col-12 col-6">
-				<p class="text-center">Contact us here:</p>
 				<p style="padding-top:20px;"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
 				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
 				<p><i class="fas fa-envelope-open"></i> owner@infinityyoga.nyc</p>
