--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <!-- Body -->
-<body id="myPage" data-spy="scroll" data-target="nav" data-offset="60">>
+<body id="myPage" data-spy="scroll" data-target="nav" data-offset="60">
 
 <!-- Header -->
 <header>
@@ -57,7 +57,6 @@
 
 <!--Main Content-->
 <main>
-
 <!-- Jumbotron Container-->
 <section class="jumbotron-container">
 <!--Jumbotron Overlay-->
