--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="container h-100">
 			<div class="row h-100 align-items-center">
 				<div class="col-12 text-center">
-                <h1>Infinity</h1>
-                 <p class="lead">Begin your practice today</p>
+                <h1 class="text-center text-wrap">Infinity</h1>
+                 <p class="lead">Yoga and Meditation Studio</p>
 				    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
 				</div>
