--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 <!--Jumbotron Overlay-->
 <div class="jumbotron-overlay">&nbsp;</div>
 <!--./jumbotron-overlay-->   
-	<div class="jumbotron jumbotron-fluid">
-        <div class="container h-100">
-			<div class="row h-100 align-items-center">
-				<div class="col-12 text-center">
-                <h1 class="text-center text-wrap">Infinity</h1>
+	<div class="jumbotron-fluid">
+        <div class="container">
+			<div class="row">
+				<div class="col-12 enter">
+                <h1 class="text-center">Infinity</h1>
                  <p class="lead">Yoga and Meditation Studio</p>
 				    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
