--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
 			<div class="row">
 				<div class="col-12 enter">
-                <h1 class="text-center">Infinity</h1>
+                <h1 class="display-1">Infinity</h1>
                  <p class="lead">Yoga and Meditation Studio</p>
 				    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
