Repaired text shadow errors as per w3c css validator

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="row">
 				<div class="col-12 enter">
                 <h1 class="display-1">Infinity</h1>
-                 <p class="lead">Yoga and Meditation Studio</p>
+                 <h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
 				    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 					</div>
 				</div>
