--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Custom Stylesheet -->
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
-	<title>Infinity Yoga | Sign up today and get 1 month of unlimited yoga!</title>
+	<title>Infinity Yoga | Yoga and Meditation Studio in New York, NY </title>
 </head>
 
 <!-- Body -->
@@ -199,22 +199,21 @@
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="overflow-wrap: break-word" style="font-size:14px;"><strong>"Infinity yoga is the best! I feel happier and healthier than
-							ever!"</strong>
+							<blockquote class="overflow-wrap: break-word" style="font-size:14px;"><strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know when to go!"</strong>
 							</blockquote>
-							<p class="blockquote-footer" style="font-size:1em;">Octavia Bliss, Studio member</p>
+								<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
-								<strong>"I started meditation classes two months ago and I already feel the effects! "</strong>
+								<strong>"As an Infinity member, I love that I can read more about yoga and meditation on their website, so I know exactly what I'm paying for!"</strong>
 							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
+								<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
-								<strong>"Infinity yoga is the best! I feel happier and healthier than ever!"</strong>
+								<strong>"As an Infinity member, I love that I can contact the studio online, so I don’t have to go out of my way."</strong>
 							</blockquote>
-							<p class="blockquote-footer" style="font-style:normal;">Octavia Bliss, Infinity Yoga Student
+							<p class="blockquote-footer" style="font-style:normal;">Sara Solar, Infinity Yoga Student
 							</p>
 						</div>
 					</div>
