--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@
 						<li data-target="#myCarousel" data-slide-to="1"></li>
 						<li data-target="#myCarousel" data-slide-to="2"></li>
 					</ol>
-
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="overflow-wrap: break-word" style="font-size:14px;"><strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know when to go!"</strong>
+							<blockquote class="overflow-wrap: break-word" style="font-size:14px;">
+								<strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know when to go!"</strong>
 							</blockquote>
-								<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
+							<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
 								<strong>"As an Infinity member, I love that I can read more about yoga and meditation on their website, so I know exactly what I'm paying for!"</strong>
 							</blockquote>
-								<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
+							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
@@ -217,7 +217,6 @@
 							</p>
 						</div>
 					</div>
-
 					<!--Left and right controls-->
 					<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
 						<div><i class="fas fa-chevron-left fa-fw" aria-hidden="true"></i></div>
@@ -249,17 +248,17 @@
 			</div>
 			<div class="col-12 col-6">
 				<div class="row">
-					<div class="col-6 col-6 col-lg-6 form-group">
+					<div class="col-12 col-md-6 col-lg-4 form-group">
 						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                 </div>
-						<div class="col-12 col-6 form-group">
+						<div class="col-12 col-md-6 col-lg-4 form-group">
 							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
                 </div>
 						</div>
 						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea>
 						<div class="row">
 							<div class="col-12 col-sm-12 form-group">
-								<button class="btn btn-info float-right" type="submit">Send</button>
+								<button class="btn btn-info text-align-center float-right" type="submit">Send</button>
 							</div>
 						</div>
 					</div>
