--- a/index.html
+++ b/index.html
@@ -198,20 +198,23 @@
 					<!--Wrapper for slides-->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<blockquote class="overflow-wrap: break-word" style="font-size:14px;">
-								<strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know when to go!"</strong>
+							<blockquote class="text-wrap" style="font-size:13px;">
+								<strong>"As a yoga student, I am happy that I can find Infinity’s address from any device, so I know where to go!"</strong>
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal">Octavia Bliss, Studio member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
-								<strong>"As an Infinity member, I love that I can read more about yoga and meditation on their website, so I know exactly what I'm paying for!"</strong>
+                        <blockquote class="text-wrap" style="font-size:13px;">
+								<strong>"As a member,
+                                 I love that I can find class details on Infinity's website,
+                                so I know exactly when to go!"</strong>
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Daniel Zen, Infinity member</p>
 						</div>
 						<div class="carousel-item">
-							<blockquote class="overflow-wrap: break-word" style="font-size:14px">
-								<strong>"As an Infinity member, I love that I can contact the studio online, so I don’t have to go out of my way."</strong>
+							 <blockquote class="text-wrap" style="font-size:13px;">
+								<strong>"As an Infinity member, I can reach out to the studio from their website, 
+                                so I never have to go out of my way."</strong>
 							</blockquote>
 							<p class="blockquote-footer" style="font-style:normal;">Sara Solar, Infinity Yoga Student
 							</p>
@@ -258,7 +261,7 @@
 						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="5"></textarea>
 						<div class="row">
 							<div class="col-12 col-sm-12 form-group">
-								<button class="btn btn-info text-align-center float-right" type="submit">Send</button>
+								<button class="btn btn-info float-right" type="submit">Send</button>
 							</div>
 						</div>
 					</div>
