Repaired duplicate container error in schedule/carousel section

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
     <!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section class="schedule" id="schedule">
-	<div class="container-fluid blue-wrapper">
-		<div class="container text-center bg-blue">
+	<div class="container-wrapper-blue">
+		<div class="container-fluid">
 			<h2>Schedule</h2>
 			<hr>
 			<p class="schedule-content">We hope to see you soon!</p>
@@ -187,7 +187,6 @@
 			</div>
 			<!--Quotes Carousel-->
 			<h3 class="text-center quotes">What Our Members Say</h3>
-			<div class="container-fixed text-center">
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
 					<!--Indicators-->
 					<ol class="carousel-indicators">
@@ -233,7 +232,6 @@
 			</div>
 			<!--./quotes-carousel-->
 		</div>
-	</div>
 </section>
 <!--./schedule-->
 
