--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 <h2 class="404">KARMA IS A</h2>
 </div>
 <a href="index.html">TAKE ME OM!</a>
-<a class="namaste" href="404.html">NAMASTE HERE</a>
+<a class="button" href="404.html">NAMASTE HERE</a>
 </div>
 </div>
 
